@@ -528,9 +528,12 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 		update_option( 'woocommerce_stripe_settings', $settings );
 
 		// including the class again because otherwise it's not present.
-		if ( WC_Stripe_UPE_Compatibility::are_inbox_notes_supported() ) {
+		if ( WC_Stripe_Inbox_Notes::are_inbox_notes_supported() ) {
 			require_once WC_STRIPE_PLUGIN_PATH . '/includes/notes/class-wc-stripe-upe-availability-note.php';
 			WC_Stripe_UPE_Availability_Note::possibly_delete_note();
+
+			require_once WC_STRIPE_PLUGIN_PATH . '/includes/notes/class-wc-stripe-upe-stripelink-note.php';
+			WC_Stripe_UPE_StripeLink_Note::possibly_delete_note();
 		}
 	}
 
