@@ -15,18 +15,4 @@ class WC_Stripe_UPE_Compatibility {
 	public static function is_wc_supported() {
 		return version_compare( WC_VERSION, self::MIN_WC_VERSION, '>=' );
 	}
-
-	public static function are_inbox_notes_supported() {
-		if ( ! class_exists( 'WC_Data_Store' ) ) {
-			return false;
-		}
-
-		try {
-			WC_Data_Store::load( 'admin-note' );
-		} catch ( Exception $e ) {
-			return false;
-		}
-
-		return trait_exists( 'Automattic\WooCommerce\Admin\Notes\NoteTraits' ) && class_exists( 'Automattic\WooCommerce\Admin\Notes\Note' );
-	}
 }
